# Logiciel_de_simulation_electronique

./: .gitignore  CMakeLists.txt  Makefile  README.md  STRUCTURE.md  app.py  be-sim  initialisation.cpp  main.cpp  simulation_output.csv  test_balayage_frequence
assets/: style.css
config/: presets.json
include/: circuit.hpp  sim_context.hpp  simulation.hpp  solver.hpp  source.hpp
resultats/simulations/: .gitkeep  circuit_output.csv
resultats/tests/: .gitkeep
resultats/traces/: .gitkeep
src/: initialisation.cpp  sim_context.cpp  simulation.cpp  solver.cpp
src/circuits/: CircuitA.cpp  CircuitB.cpp  CircuitC.cpp  CircuitD.cpp  circuit.cpp
src/sources/: Creneau.cpp  Echelon.cpp  Rectangulaire.cpp  Sinus.cpp  Triangulaire.cpp
tests/: test_balayage_frequence.cpp  test_sources.cpp
visualisation_matlab/: README.md  plot_sources.m
visualisation_python/: README.md  plot_circuit.py  plot_frequency_analysis.py  plot_test_sources.py
